--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -42,67 +42,77 @@
   <h3>Perfil de Alunos Desejados para Projeto</h3>
   <table>
     <tr>
-        <th>
+        <th style="text-align:center" >
             Aluno
         </th>
-        <th>
+        <th style="text-align:center" >
             Computação
         </th>
-        <th>
+        <th style="text-align:center" >
             Mecânica
         </th>
-        <th>
+        <th style="text-align:center" >
             Mecatrônica
         </th>
     </tr>
-      <tr>
-        <td>Aluno 1</td>
-        <td><input type="checkbox" name="comp1"></td>
-        <td><input type="checkbox" name="mec1"></td>
-        <td><input type="checkbox" name="mxt1"></td>
-        <!-- <td>&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-          {% if projeto.pk in opcoes_list %}checked{% endif %}>&nbsp;</td> -->
-      </tr>
-      <tr>
+    <tr> <!-- NAO EH A FORMA MAIS ELEGANTE MAS FUNCIONA POR ENQUANTO -->
+      <td>Aluno 1</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno1_computacao %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno1_mecanica %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno1_mecatronica %}checked{% endif %}>&nbsp;</td>
+    </tr>
+    <tr>
       <td>Aluno 2</td>
-      <td><input type="checkbox" name="comp2"></td>
-      <td><input type="checkbox" name="mec2"></td>
-      <td><input type="checkbox" name="mxt2"></td>
-      </tr>
-      <tr>
-          <td>Aluno 3</td>
-          <td><input type="checkbox" name="comp3"></td>
-          <td><input type="checkbox" name="mec3"></td>
-          <td><input type="checkbox" name="mxt3"></td>
-        </tr>
-        <tr>
-          <td>Aluno 4</td>
-          <td><input type="checkbox" name="comp4"></td>
-          <td><input type="checkbox" name="mec4"></td>
-          <td><input type="checkbox" name="mxt4"></td>
-        </tr>
-      </table>
-      <br><hr>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno2_computacao %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno2_mecanica %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno2_mecatronica %}checked{% endif %}>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Aluno 3</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno3_computacao %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno3_mecanica %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno3_mecatronica %}checked{% endif %}>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>Aluno 4</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno4_computacao %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno4_mecanica %}checked{% endif %}>&nbsp;</td>
+      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
+        {% if projeto.perfil_aluno4_mecatronica %}checked{% endif %}>&nbsp;</td>
+    </tr>
+  </table>
+  <br><hr>
 
   <h3>Disciplina Relacionadas</h3>
   <table>
-      <tr>
-          <th>
-              Disciplina
-          </th>
-          <th>
-              Semestre
-          </th>
-      </tr>
-        <tr>
-          <td>Machine Learning</td>
-          <td>eletiva</td>
-        </tr>
-        <tr>
-            <td>Robótica e Automação Industrial</td>
-            <td>eletiva</td>
-          </tr>
-        </table>
-        <br><hr>
+    <tr>
+      <th>
+        Disciplina
+      </th>
+      <th>
+        Semestre
+      </th>
+    </tr>
+    <tr>
+      <td>Machine Learning</td>
+      <td>eletiva</td>
+    </tr>
+    <tr>
+      <td>Robótica e Automação Industrial</td>
+      <td>eletiva</td>
+    </tr>
+  </table>
+  <br><hr>
 
 {% endblock %}
