--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -7,8 +7,7 @@
 
 {% block head %}
   {% load static %}
-  <link href="{% static 'css/horizBarChart.css' %}" media="all" rel="stylesheet" type="text/css" />
-  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <link href="{% static 'css/horizBarChart.css' %}" media="all" rel="stylesheet" type="text/css" /> <!-- PARA HISTOGRAMA -->
   <script src="{% static 'js/jquery.horizBarChart.min.js' %}"></script>
   <script>
     $(document).ready(function(){
