--- a/projetos/templates/projetos/calendario.html
+++ b/projetos/templates/projetos/calendario.html
@@ -6,152 +6,281 @@
 {% endcomment %}
 
 {% block head %}
-  {% load static %}
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-datepicker.min.css' %}"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-year-calendar.min.css' %}"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
+  <!-- REFERENCIA: https://github.com/year-calendar/js-year-calendar -->
+
+  <script src="https://unpkg.com/js-year-calendar@latest/dist/js-year-calendar.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://unpkg.com/js-year-calendar@latest/dist/js-year-calendar.min.css" />
+  <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'> -->
+  <link rel='stylesheet' href='https://unpkg.com/bootstrap-datepicker@1.8.0/dist/css/bootstrap-datepicker.standalone.min.css'>
+  
+  <script src="https://unpkg.com/js-year-calendar@latest/locales/js-year-calendar.pt.js"></script>
+
   <style>
     table, th, td {
-      border: 0px solid white;
+      border: 0px;
     }
   </style>
+
+  <script>
+    window.console = window.console || function(t) {};
+    if (document.location.search.match(/type=embed/gi)) {
+      window.parent.postMessage("resize", "*");
+    }
+  </script>
+
 {% endblock %}
 
 {% block content %}
 
-<!-- DESCOBRI TARDIAMENTE QUE ESSA BIBLIOTECA ESTA VELHA E TEM UMA MELHOR -->
-<!-- VER EM: https://github.com/year-calendar/js-year-calendar -->
+  <h3>Calendário de Eventos do PFE</h3>
+  <br>
+  <div id='calendar'></div>
+  <br>
 
-<!-- Também acertar a base de dados com um ENUM para as cores -->
+  {% for evento in eventos|dictsort:"endDate" %}
+    {% if evento.name != "Feriado" %}
+      <span class="a{{evento.endDate.year}} ano">
+        {% ifchanged evento.name evento.endDate.year %}   
+          <br><font style="color:{{evento.color}}">&#9608;</font> {{evento.name}}: 
+          {% if evento.startDate == evento.endDate %} 
+            {{evento.endDate.day}}/{{evento.endDate.month}}
+          {% else %}
+            {{evento.startDate.day}}/{{evento.startDate.month}} à {{evento.endDate.day}}/{{evento.endDate.month}} 
+          {% endif %}
+        {% else %}
+          ; {{evento.endDate.day}}/{{evento.endDate.month}}
+        {% endifchanged %}
+      </span>
+    {% endif %}
+  {% endfor %}
+  
+  {% for aula in aulas|dictsort:"endDate" %}
+    <span class="a{{aula.endDate.year}} ano">
+      {% ifchanged aula.name aula.endDate.year %} 
+        <br><font style="color:{{aula.color}}">&#9608;</font> {{aula.name}}: 
+        {{aula.endDate.day}}/{{aula.endDate.month}}
+      {% else %}
+        ; {{aula.endDate.day}}/{{aula.endDate.month}}
+      {% endifchanged %}
+    </span>
+  {% endfor %}
 
-<script src="{% static 'js/respond.min.js' %}"></script>
-<script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  {% if laboratorios %}
+    <br>
+    {% for laboratorio in laboratorios|dictsort:"endDate" %}
+      {% if laboratorio.name != "Feriado" %}
+        <span class="a{{laboratorio.endDate.year}} ano">
+          {% ifchanged laboratorio.name laboratorio.endDate.year %}   
+            <br><font style="background-image : linear-gradient(to bottom, transparent 80%, {{laboratorio.color}} 80%">&nbsp;&nbsp;&nbsp;</font> {{laboratorio.name}}: 
+            {% if laboratorio.startDate == laboratorio.endDate %} 
+              {{laboratorio.endDate.day}}/{{laboratorio.endDate.month}}
+            {% else %}
+              {{laboratorio.startDate.day}}/{{laboratorio.startDate.month}} à {{laboratorio.endDate.day}}/{{laboratorio.endDate.month}} 
+            {% endif %}
+          {% else %}
+            ; {{laboratorio.endDate.day}}/{{laboratorio.endDate.month}}
+          {% endifchanged %}
+        </span>
+      {% endif %}
+    {% endfor %}
+    <br><font style="text-decoration: underline solid orange">
+    Dias sublinhados possuem disponibilidade de trabalho no laboratório 3 (L3) [as sextas-feiras]
+    </font>
+  {% endif %}
 
-<script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script> 
-<script src="{% static 'js/bootstrap-year-calendar.min.js' %}"></script>
-<script src="{% static 'js/bootstrap-year-calendar.pt.js' %}"></script>
-<script src="{% static 'js/bootstrap-popover.js' %}"></script>
-<script src="{% static 'js/scripts.js' %}"></script>
+  {% if provas %}
+    <br>
+    {% for prova in provas|dictsort:"endDate" %}
+      {% if prova.name != "Feriado" %}
+        <span class="a{{prova.endDate.year}} ano">
+          {% ifchanged prova.name prova.endDate.year %}   
+            <br><font style="background-image : linear-gradient(to bottom, transparent 80%, {{prova.color}} 80%">&nbsp;&nbsp;&nbsp;</font> {{prova.name}}: 
+            {% if prova.startDate == prova.endDate %} 
+              {{prova.endDate.day}}/{{prova.endDate.month}}
+            {% else %}
+              {{prova.startDate.day}}/{{prova.startDate.month}} à {{prova.endDate.day}}/{{prova.endDate.month}} 
+            {% endif %}
+          {% else %}
+            {% if prova.startDate == prova.endDate %} 
+              ; {{prova.endDate.day}}/{{prova.endDate.month}}
+            {% else %}
+              ; {{prova.startDate.day}}/{{prova.startDate.month}} à {{prova.endDate.day}}/{{prova.endDate.month}} 
+            {% endif %}
+          {% endifchanged %}
+        </span>
+      {% endif %}
+    {% endfor %}
+    <br><font style="color: purple">
+      Semana de provas sublinhado em vermelho
+    </font>
+  {% endif %}
+  <br>
+  <br>
 
-<script>
+  <div class="modal fade" id="event-modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Event</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+            </div>
+            <div class="modal-body">
+                <input type="hidden" name="event-index">
+                <form class="form-horizontal">
+                    <div class="form-group row">
+                        <label for="event-name" class="col-sm-4 control-label">Name</label>
+                        <div class="col-sm-8">
+                            <input id="event-name" name="event-name" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="event-location" class="col-sm-4 control-label">Location</label>
+                        <div class="col-sm-8">
+                            <input id="event-location" name="event-location" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="min-date" class="col-sm-4 control-label">Dates</label>
+                        <div class="col-sm-8">
+                            <div class="input-group input-daterange" data-provide="datepicker">
+                                <input id="min-date" name="event-start-date" type="text" class="form-control">
+                <div class="input-group-prepend input-group-append">
+                    <div class="input-group-text">to</div>
+                </div>
+                                <input name="event-end-date" type="text" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="save-event">
+                    Save
+                </button>
+            </div>
+        </div>
+    </div>
+  </div>
+  <div id="context-menu">
+  </div>
 
-  function editEvent(event) {
-    $('#event-modal input[name="event-index"]').val(event ? event.id : '');
-    $('#event-modal input[name="event-name"]').val(event ? event.name : '');
-    $('#event-modal input[name="event-location"]').val(event ? event.location : '');
-    $('#event-modal input[name="event-start-date"]').datepicker('update', event ? event.startDate : '');
-    $('#event-modal input[name="event-end-date"]').datepicker('update', event ? event.endDate : '');
-    $('#event-modal').modal();
-  }
+  <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script> -->
+  <!-- <script src='https://unpkg.com/popper.js@1.14.7/dist/umd/popper.min.js'></script> -->
+  <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js'></script> -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js'></script> 
+  
+  <script id="rendered-js">
 
-  function deleteEvent(event) {
-    var dataSource = $('#calendar').data('calendar').getDataSource();
+    let calendar = null;
 
-    for(var i in dataSource) {
-        if(dataSource[i].id == event.id) {
-            dataSource.splice(i, 1);
-            break;
-        }
+    function editEvent(event) {
+      $('#event-modal input[name="event-index"]').val(event ? event.id : '');
+      $('#event-modal input[name="event-name"]').val(event ? event.name : '');
+      $('#event-modal input[name="event-location"]').val(event ? event.location : '');
+      $('#event-modal input[name="event-start-date"]').datepicker('update', event ? event.startDate : '');
+      $('#event-modal input[name="event-end-date"]').datepicker('update', event ? event.endDate : '');
+      $('#event-modal').modal();
     }
-    
-    $('#calendar').data('calendar').setDataSource(dataSource);
-  }
 
-  function saveEvent() {
-    var event = {
+    function deleteEvent(event) {
+      var dataSource = calendar.getDataSource();
+
+      calendar.setDataSource(dataSource.filter(item => item.id == event.id));
+    }
+
+    function saveEvent() {
+      var event = {
         id: $('#event-modal input[name="event-index"]').val(),
         name: $('#event-modal input[name="event-name"]').val(),
         location: $('#event-modal input[name="event-location"]').val(),
         startDate: $('#event-modal input[name="event-start-date"]').datepicker('getDate'),
-        endDate: $('#event-modal input[name="event-end-date"]').datepicker('getDate')
-    }
-    
-    var dataSource = $('#calendar').data('calendar').getDataSource();
+        endDate: $('#event-modal input[name="event-end-date"]').datepicker('getDate') };
 
-    if(event.id) {
-        for(var i in dataSource) {
-            if(dataSource[i].id == event.id) {
-                dataSource[i].name = event.name;
-                dataSource[i].location = event.location;
-                dataSource[i].startDate = event.startDate;
-                dataSource[i].endDate = event.endDate;
-            }
+
+      var dataSource = calendar.getDataSource();
+
+      if (event.id) {
+        for (var i in dataSource) {
+          if (dataSource[i].id == event.id) {
+            dataSource[i].name = event.name;
+            dataSource[i].location = event.location;
+            dataSource[i].startDate = event.startDate;
+            dataSource[i].endDate = event.endDate;
+          }
         }
-    }
-    else
-    {
+      } else
+
+      {
         var newId = 0;
-        for(var i in dataSource) {
-            if(dataSource[i].id > newId) {
-                newId = dataSource[i].id;
-            }
+        for (var i in dataSource) {
+          if (dataSource[i].id > newId) {
+            newId = dataSource[i].id;
+          }
         }
-        
+
         newId++;
         event.id = newId;
-    
-        dataSource.push(event);
-    }
-    
-    $('#calendar').data('calendar').setDataSource(dataSource);
-    $('#event-modal').modal('hide');
-  }
 
-$(function() {
-  var currentYear = new Date().getFullYear();
-  var currentMonth = new Date().getMonth(); 
-  var currentDate = new Date().getDate();
-  var hoje = new Date(currentYear, currentMonth, currentDate).getTime();
-   
-    $('#calendar').calendar({ 
+        dataSource.push(event);
+      }
+
+      calendar.setDataSource(dataSource);
+      $('#event-modal').modal('hide');
+    }
+
+    $(function () {
+      var currentYear = new Date().getFullYear();
+      var currentMonth = new Date().getMonth(); 
+      var currentDate = new Date().getDate();
+      var hoje = new Date(currentYear, currentMonth, currentDate).getTime();
+
+      calendar = new Calendar('#calendar', {
+        language: 'pt',
         enableContextMenu: true,
         enableRangeSelection: true,
         style:'background',
-        language:'pt',
-        contextMenuItems:[
-            {
-                text: 'Update',
-                click: editEvent
-            },
-            {
-                text: 'Delete',
-                click: deleteEvent
-            }
-        ],
-        selectRange: function(e) {
-            editEvent({ startDate: e.startDate, endDate: e.endDate });
+        contextMenuItems: [
+        {
+          text: 'Update',
+          click: editEvent },
+        {
+          text: 'Delete',
+          click: deleteEvent }],
+
+        selectRange: function (e) {
+          editEvent({ startDate: e.startDate, endDate: e.endDate });
         },
-        mouseOnDay: function(e) {
-            if(e.events.length > 0) {
-                var content = '';
-                
-                for(var i in e.events) {
-                    content += '<div class="event-tooltip-content">'
-                                    + '<div class="event-name" style="color:' + e.events[i].color + '">' + e.events[i].name + '</div>'
-                                    + '<div class="event-location">' + e.events[i].location + '</div>'
-                                + '</div>';
-                }
-            
-                $(e.element).popover({ 
-                    trigger: 'manual',
-                    container: 'body',
-                    html:true,
-                    content: content
-                });
-                
-                $(e.element).popover('show');
+        mouseOnDay: function (e) {
+          if (e.events.length > 0) {
+            var content = '';
+
+            for (var i in e.events) {
+              content += '<div class="event-tooltip-content">' +
+              '<div class="event-name" style="color:' + e.events[i].color + '">' + e.events[i].name + '</div>' +
+              '<div class="event-location">' + e.events[i].location + '</div>' +
+              '</div>';
             }
+
+            $(e.element).popover({
+              trigger: 'manual',
+              container: 'body',
+              html: true,
+              content: content });
+
+
+            $(e.element).popover('show');
+          }
         },
-        mouseOutDay: function(e) {
-            if(e.events.length > 0) {
-                $(e.element).popover('hide');
-            }
-        },
-        dayContextMenu: function(e) {
+        mouseOutDay: function (e) {
+          if (e.events.length > 0) {
             $(e.element).popover('hide');
+          }
+        },
+        dayContextMenu: function (e) {
+          $(e.element).popover('hide');
         },
         disabledDays: [
             new Date(2019,11,23),
@@ -163,7 +292,7 @@ $(function() {
             new Date(2019,11,31),
         ],
         dataSource: [
-          {% for evento in eventos %} 
+        {% for evento in eventos %} 
             {
                 id: {{evento.id}},
                 name: "{{evento.name}}",
@@ -183,62 +312,50 @@ $(function() {
                 color: "{{evento.color}}",
             },
           {% endfor %}
-        ],
-        customDayRenderer: function(element, date) {
+      ],
+      
+      customDayRenderer: function(element, date) {
+          $(element).css('border-radius', '0px');
           if(date.getTime() == hoje) {
             $(element).css('outline', '2px solid blue');
           }
-          else if (date.getDay() === 6 || date.getDay() === 0) {
-            $(element).css('background-color', 'lightgrey');
+          if (date.getDay() === 6 || date.getDay() === 0) {
+            $(element).css('background-color', 'lightgrey');  
+          } else {
+            {% for prova in provas %}
+              if(
+                date.getTime() >= new Date({{prova.startDate.year}}, {{prova.startDate.month|add:-1}},{{prova.startDate.day}}).getTime()
+                &&
+                date.getTime() <= new Date({{prova.endDate.year}}, {{prova.endDate.month|add:-1}},{{prova.endDate.day}}).getTime()
+                ) {
+                $(element).css('border-bottom', '4px solid {{prova.color}}');
+                $(element).css('line-height', '0.85');
+              }
+            {% endfor %}
+            {% for lab in laboratorios %}
+              if(date.getTime() == new Date({{lab.startDate.year}}, {{lab.startDate.month|add:-1}},{{lab.startDate.day}}).getTime()) {
+                $(element).css('background-image', 'linear-gradient(to bottom, transparent 80%, {{lab.color}} 80% )');
+              }
+            {% endfor %}
           }
-          {% for lab in laboratorios %} 
-            else if(date.getTime() == new Date({{lab.startDate.year}}, {{lab.startDate.month|add:-1}},{{lab.startDate.day}}).getTime()) {
-              $(element).css('text-decoration', 'underline solid {{lab.color}}');
-            }
-          {% endfor %}
         }
-    });
-    
-    $('#save-event').click(function() {
-        saveEvent();
-    });
-});
-</script>
+       });
 
-  <h3>Calendário de Eventos do PFE</h3>
-  <br>
-  <div id='calendar'></div>
-  <br>
-  {% for evento in eventos|dictsort:"endDate" %}
-    {% if evento.name != "Feriado" %}
-      {% ifchanged evento.name %} 
-        <br><font style="color:{{evento.color}}">&#9608;</font> {{evento.name}}: 
-        {% if evento.startDate == evento.endDate %} 
-          {{evento.endDate.day}}/{{evento.endDate.month}}
-        {% else %}
-          {{evento.startDate.day}}/{{evento.startDate.month}} à {{evento.endDate.day}}/{{evento.endDate.month}} 
-        {% endif %}     
-      {% else %}
-        ; {{evento.endDate.day}}/{{evento.endDate.month}}
-      {% endifchanged %}
-    {% endif %}
-  {% endfor %}
-  {% for aula in aulas|dictsort:"endDate" %}
-    {% ifchanged aula.name %} 
-      <br><font style="color:{{aula.color}}">&#9608;</font> {{aula.name}}: 
-       {{aula.endDate.day}}/{{aula.endDate.month}}
-    {% else %}
-      ; {{aula.endDate.day}}/{{aula.endDate.month}}
-    {% endifchanged %}
-  {% endfor %}
-  <br><font style="text-decoration: underline solid orange">
-  Dias sublinhados possuem disponibilidade de trabalho no laboratório 3 (L3) [as sextas-feiras]
-  </font>
-  <br><font style="color: purple">
-    Semana de provas entre: 2/10 à 9/10 e 27/11 à 3/12
-  </font>
-  <br>
-  <br>
+      $('#save-event').click(function () {
+        saveEvent();
+      });
+    });
+
+    document.querySelector('#calendar').addEventListener('yearChanged', function(e) {
+      console.log("New year selected: " + e.currentYear);
+      [].forEach.call(document.querySelectorAll('.ano'), function (el) {
+        el.style.display = 'none';
+      });
+      [].forEach.call(document.querySelectorAll('.a'+e.currentYear), function (el) {
+        el.style.display = 'inline';
+      });
+    })
+
+  </script>
 
 {% endblock %}
-
