--- a/projetos/templates/projetos/organizacoes_lista.html
+++ b/projetos/templates/projetos/organizacoes_lista.html
@@ -6,8 +6,11 @@
 {% endcomment %}
 
 {% block head %}
-  {% comment %} <script src="https://www.w3schools.com/lib/w3.js"></script> {% endcomment %}
+
+  {% load static %}
+
   <script src="{% static 'js/w3.js' %}"></script>
+
 {% endblock %}
 
 {% block content %}
