--- a/projetos/templates/projetos/evolucao_objetivos.html
+++ b/projetos/templates/projetos/evolucao_objetivos.html
@@ -14,6 +14,7 @@
   <script src="{% static 'js/w3.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
+  <script src="{% static 'js/chartjs-plugin-annotation.min.js' %}"></script>
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
@@ -72,50 +73,112 @@
 
         <div class="container">
 
-        <div style="max-width:860px;margin: auto;"> 
-            <canvas id="chart-medias"></canvas>
-        </div>
+            <div style="max-width:860px;margin: auto;"> 
+                <canvas id="chart-medias"></canvas>
+            </div>
 
-        <script>
-    
-    var config_medias = {
-        type: 'line',
-        data: {
-            labels: [
-                {% for edicao in edicoes %}
-                    "{{edicao}}",
-                {% endfor %}
-            ],
-            datasets: [
-                {% for media in medias %}
+            <div class="row mt-5">
+                <div class="col"><canvas id="horizontal-objetivos"></canvas></div>
+            </div>
+
+            <div><br><br><br></div>{% comment %} Solução pouco elegante, mas funciona. {% endcomment %}
+
+            <script>
+
+              var labels = [
+                    {% for edicao in edicoes %}
+                        "{{edicao}}",
+                    {% endfor %}
+                ]
+
+              var datasets = [
+                  {% for media in medias %}
                     { 
-                        data: [
-                            {% for nota in media.media %}
-                                {{nota|stringformat:".2f"|unlocalize}},
-                            {% endfor %}
-                        ],
+                        data: [{% for nota in media.media %}{% if nota >= 0 %}{{nota|stringformat:".2f"|unlocalize}}{% endif %},{% endfor %}],
                         label: "{{media.objetivo}}",
                         borderColor: "{{media.cor}}",
+                        backgroundColor: "{{media.cor}}",
                         fill: false,
                         spanGaps: true,
                     },
-                {% endfor %}
-            ]
+                  {% endfor %}
+                ] 
+
+    var config_medias = {
+        type: 'line',
+        data: {
+            labels: labels,
+            datasets: datasets,
         },
         options: {
             title: {
                 display: true,
                 text: 'Evolução nos semestres'
             }, 
-            {% comment %} scales: {
-                yAxes: [{
+        }
+    }
+
+    var config_objetivos = {
+        type: 'horizontalBar',
+        data: {
+          labels: labels,
+          datasets: datasets,
+        },
+        options: {
+            legend: { display: true },
+            
+            title: {
+                display: true,
+                text: 'Médias Obtidas nos Objetivos de Aprendizagem'
+            },
+            scales: {
+                xAxes: [{
                     ticks: {
                         beginAtZero: true,
                         max: 10
                     }
                 }]
-            } {% endcomment %}
-
+            },
+            plugins: {
+                datalabels: {
+                    formatter: (value, ctx) => {
+                        if(value>0) {
+                            return (value).toFixed(2);
+                        } else {
+                            return " ";
+                        }
+                    },
+                    color: '#000',
+                }
+            },
+            annotation: {
+                annotations: [
+                    {
+                        type: 'line',
+                        mode: 'vertical',
+                        scaleID: 'x-axis-0',
+                        value: 5,
+                        borderColor: 'rgb(225, 12, 12)',
+                        borderWidth: 6,
+                        label: {
+                            enabled: false,
+                            content: 'Test label'
+                        }
+                    },
+                    {
+                        type: 'line',
+                        mode: 'vertical',
+                        scaleID: 'x-axis-0',
+                        value: 7,
+                        borderColor: 'rgb(12, 225, 12)',
+                        borderWidth: 6,
+                        label: {
+                            enabled: false,
+                            content: 'Test label'
+                        },
+                    }
+                ]
+            }
         }
     }
 
@@ -124,6 +187,14 @@
       // Chart do média dos alunos
       var chart_medias = document.getElementById('chart-medias').getContext('2d');
       window.medias = new Chart(chart_medias, config_medias);
+
+
+      {% comment %} {% if medias_geral %} {% endcomment %}
+        // Chart do nível nos objetivos de aprendizagem
+        var horizontal_objetivos = document.getElementById('horizontal-objetivos').getContext('2d');
+        window.objetivos = new Chart(horizontal_objetivos, config_objetivos);
+      {% comment %} {% endif %} {% endcomment %}
+
     }
 
     window.onload = carrega_pagina
